fixed misaligned bouncing down arrow

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -25,7 +25,7 @@ html>body .full-screen {
 }
 
 #splash-button {
-  padding-right: 5rem;
+  padding-right: 2.5rem;
   height: 10%;
   width: 100%;
   position: absolute;
